correct dark mode heading color

--- a/src/components/Card/_card.scss
+++ b/src/components/Card/_card.scss
@@ -392,7 +392,7 @@ $device-offset-v: 58px;
       color: $color-classic-gray-dark;
 
       .tco-lights-out & {
-        color: $color-dark-theme-blue;
+        color: $color-foreground-on-tint;
       }
     }
 
